--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
                 <div class="work-container">
                     <div class="design">
                         <h3>Garden Club (standard example)</h3>
-                        <img class="computer" src="public/images/computer.jpg" alt="Computer depicting a standard website page">
+                        <img class="computer" src="public/images/garden-club.jpg" alt="Computer depicting a standard website page">
                         </br> Visit <a class="here" href="">here</a> to see the final product.
                     </div>
                     <div class="design">
                         <h3>Blog Application (premium example)</h3>
-                        <img class="computer" src="public/images/computer.jpg" alt="Computer depicting our blog API">
+                        <img class="computer" src="public/images/blog-app.jpg" alt="Computer depicting our blog API">
                         </br> Visit <a href=""><i class="fa fa-github" aria-hidden="true"></i></a> to view the process and final product.
                     </div>
                 </div>
@@ -147,7 +147,7 @@
                 <li><a href="pages/contact.html">Contact us</a></li>
             </ul>
         </div>
-        <div class="copyright">Copyright © 2024 Valley Digital. All rights reserved. Images designed by Pexels.</div>
+        <div class="copyright">Copyright © 2024 Valley Digital. All rights reserved. Images designed by Pexels.o</div>
     </footer>
 </body>
 </html>
